[gd_scene load_steps=5 format=3 uid="uid://du65lrtiyds3j"]

[ext_resource type="Script" uid="uid://4npg6m6ilw46" path="res://Town/town.gd" id="1_e8yg3"]
[ext_resource type="PackedScene" uid="uid://d2ycwdjcci4oy" path="res://Town/town_sprite_parts.tscn" id="2_f2mr4"]
[ext_resource type="PackedScene" uid="uid://c4osuvlt4w5ww" path="res://Town/party_sprite.tscn" id="4_dv18y"]

[sub_resource type="CircleShape2D" id="CircleShape2D_gwqsq"]
radius = 116.15507

[node name="Town" type="Node2D"]
script = ExtResource("1_e8yg3")

[node name="TownSpriteParts" parent="." instance=ExtResource("2_f2mr4")]

[node name="HealthBar" type="ProgressBar" parent="."]
unique_name_in_owner = true
offset_left = -124.0
offset_top = 59.0
offset_right = 125.0
offset_bottom = 86.0

[node name="CelebrateSprites" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="PartySprite" parent="CelebrateSprites" instance=ExtResource("4_dv18y")]
position = Vector2(43, -53)

[node name="PartySprite2" parent="CelebrateSprites" instance=ExtResource("4_dv18y")]
position = Vector2(-64, 18.000004)
rotation = -1.7534539

[node name="PartySprite3" parent="CelebrateSprites" instance=ExtResource("4_dv18y")]
position = Vector2(47, 27)
rotation = 0.35959685

[node name="SpeechBubble" type="Label" parent="."]
unique_name_in_owner = true
offset_left = 70.0
offset_top = -43.0
offset_right = 198.0
offset_bottom = -20.0
text = "Hoorah, Hooray!"

[node name="Footprint" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Footprint"]
shape = SubResource("CircleShape2D_gwqsq")
